--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  type="text/css" href="styles.css"/>
         <title>Search</title>
     </head>
     <body>
         <div id="navbar">
             <a href="image.html">Images</a>
-            <a href="#">Advanced</a>
+            <a href="advanced.html">Advanced</a>
         </div>
         <div class="container">
-            <h1>Google Search<h1>
+            <h1>Google Search</h1>
             <form action="https://www.google.com/search">
                 <div class="searchdiv">
                     <input type="text" name="q">
                 </div>
                 <div class="buttondiv">
                     <input type="submit" value="Search on Google">
-                    <input type="submit" value="I'm feeling lucky">
+                    <input type="submit" name="btnI" value="I'm feeling lucky">
                 </div>
             </form>
         </div>
