--- a/image.html
+++ b/image.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1>Google Search</h1>
             <h4>Images</h4>
-            <form action="https://www.google.com/search">
+            <form action="https://www.google.com/search" autocomplete="off">
                 <div class="searchdiv">
                     <input type="text" name="q">
                     <input type="hidden" name="hl" value="sv">
