--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="container">
             <h1>Google Search</h1>
-            <form action="https://www.google.com/search">
+            <form action="https://www.google.com/search" autocomplete="off">
                 <div class="searchdiv">
                     <input type="text" name="q">
                 </div>
